=== (ongoing) ===

=== 0.4 ===

- added identifier field for rating categories

=== 0.3 ===

- added setting to use a custom form

=== 0.2.1 ===

- Fixed form
- Added reviewed item to permission function

=== 0.2 ===

- Added RatingAdmin
- Added average_rating field to Review model

=== 0.1.1 ===
- Added is_editable function to review model

=== 0.1 ===
- Created basic app


# Suggested file syntax:
#
# === (ongoing) ===
# - this is always on top of the file
# - when you release a new version, you rename the last `(ongoing)` to the new
#   version and add a new `=== (ongoing) ===` to the top of the file
#
# === 1.0 ===
# - a major version is created when the software reached a milestone and is
#   feature complete
#
# === 0.2 ===
# - a minor version is created when new features or significant changes have
#   been made to the software.
#
# === 0.1.1 ==
# - for bugfix releases, fixing typos in the docs, restructuring things, simply
#   anything that doesn't really change the behaviour of the software you
#   might use the third digit which is also sometimes called the build number.