@@ -1,0 +1,147 @@
+# flake8: noqa
+# -*- coding: utf-8 -*-
+from south.utils import datetime_utils as datetime
+from south.db import db
+from south.v2 import SchemaMigration
+from django.db import models
+
+
+class Migration(SchemaMigration):
+
+    def forwards(self, orm):
+        # Deleting field 'RatingCategoryTranslation.category'
+        db.delete_column(u'review_ratingcategorytranslation', 'category_id')
+
+        # Deleting field 'RatingCategoryTranslation.language'
+        db.delete_column(u'review_ratingcategorytranslation', 'language')
+
+        # Adding field 'RatingCategoryTranslation.language_code'
+        db.add_column(u'review_ratingcategory_translation', 'language_code',
+                      self.gf('django.db.models.fields.CharField')(default='en', max_length=15, db_index=True),
+                      keep_default=False)
+
+        # Adding field 'RatingCategoryTranslation.master'
+        db.add_column(u'review_ratingcategory_translation', 'master',
+                      self.gf('django.db.models.fields.related.ForeignKey')(related_name='translations', null=True, to=orm['review.RatingCategory']),
+                      keep_default=False)
+
+        # Adding unique constraint on 'RatingCategoryTranslation', fields ['language_code', 'master']
+        db.create_unique(u'review_ratingcategory_translation', ['language_code', 'master_id'])
+
+
+    def backwards(self, orm):
+        # Removing unique constraint on 'RatingCategoryTranslation', fields ['language_code', 'master']
+        db.delete_unique(u'review_ratingcategory_translation', ['language_code', 'master_id'])
+
+
+        # User chose to not deal with backwards NULL issues for 'RatingCategoryTranslation.category'
+        raise RuntimeError("Cannot reverse this migration. 'RatingCategoryTranslation.category' and its values cannot be restored.")
+
+        # The following code is provided here to aid in writing a correct migration        # Adding field 'RatingCategoryTranslation.category'
+        db.add_column(u'review_ratingcategorytranslation', 'category',
+                      self.gf('django.db.models.fields.related.ForeignKey')(to=orm['review.RatingCategory']),
+                      keep_default=False)
+
+
+        # User chose to not deal with backwards NULL issues for 'RatingCategoryTranslation.language'
+        raise RuntimeError("Cannot reverse this migration. 'RatingCategoryTranslation.language' and its values cannot be restored.")
+
+        # The following code is provided here to aid in writing a correct migration        # Adding field 'RatingCategoryTranslation.language'
+        db.add_column(u'review_ratingcategorytranslation', 'language',
+                      self.gf('django.db.models.fields.CharField')(max_length=2),
+                      keep_default=False)
+
+        # Deleting field 'RatingCategoryTranslation.language_code'
+        db.delete_column(u'review_ratingcategory_translation', 'language_code')
+
+        # Deleting field 'RatingCategoryTranslation.master'
+        db.delete_column(u'review_ratingcategory_translation', 'master_id')
+
+
+    models = {
+        u'auth.group': {
+            'Meta': {'object_name': 'Group'},
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'name': ('django.db.models.fields.CharField', [], {'unique': 'True', 'max_length': '80'}),
+            'permissions': ('django.db.models.fields.related.ManyToManyField', [], {'to': u"orm['auth.Permission']", 'symmetrical': 'False', 'blank': 'True'})
+        },
+        u'auth.permission': {
+            'Meta': {'ordering': "(u'content_type__app_label', u'content_type__model', u'codename')", 'unique_together': "((u'content_type', u'codename'),)", 'object_name': 'Permission'},
+            'codename': ('django.db.models.fields.CharField', [], {'max_length': '100'}),
+            'content_type': ('django.db.models.fields.related.ForeignKey', [], {'to': u"orm['contenttypes.ContentType']"}),
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '50'})
+        },
+        u'auth.user': {
+            'Meta': {'object_name': 'User'},
+            'date_joined': ('django.db.models.fields.DateTimeField', [], {'default': 'datetime.datetime.now'}),
+            'email': ('django.db.models.fields.EmailField', [], {'max_length': '75', 'blank': 'True'}),
+            'first_name': ('django.db.models.fields.CharField', [], {'max_length': '30', 'blank': 'True'}),
+            'groups': ('django.db.models.fields.related.ManyToManyField', [], {'to': u"orm['auth.Group']", 'symmetrical': 'False', 'blank': 'True'}),
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'is_active': ('django.db.models.fields.BooleanField', [], {'default': 'True'}),
+            'is_staff': ('django.db.models.fields.BooleanField', [], {'default': 'False'}),
+            'is_superuser': ('django.db.models.fields.BooleanField', [], {'default': 'False'}),
+            'last_login': ('django.db.models.fields.DateTimeField', [], {'default': 'datetime.datetime.now'}),
+            'last_name': ('django.db.models.fields.CharField', [], {'max_length': '30', 'blank': 'True'}),
+            'password': ('django.db.models.fields.CharField', [], {'max_length': '128'}),
+            'user_permissions': ('django.db.models.fields.related.ManyToManyField', [], {'to': u"orm['auth.Permission']", 'symmetrical': 'False', 'blank': 'True'}),
+            'username': ('django.db.models.fields.CharField', [], {'unique': 'True', 'max_length': '30'})
+        },
+        u'contenttypes.contenttype': {
+            'Meta': {'ordering': "('name',)", 'unique_together': "(('app_label', 'model'),)", 'object_name': 'ContentType', 'db_table': "'django_content_type'"},
+            'app_label': ('django.db.models.fields.CharField', [], {'max_length': '100'}),
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'model': ('django.db.models.fields.CharField', [], {'max_length': '100'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '100'})
+        },
+        u'review.rating': {
+            'Meta': {'ordering': "['category', 'review']", 'object_name': 'Rating'},
+            'category': ('django.db.models.fields.related.ForeignKey', [], {'to': u"orm['review.RatingCategory']"}),
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'review': ('django.db.models.fields.related.ForeignKey', [], {'related_name': "'ratings'", 'to': u"orm['review.Review']"}),
+            'value': ('django.db.models.fields.CharField', [], {'max_length': '20'})
+        },
+        u'review.ratingcategory': {
+            'Meta': {'object_name': 'RatingCategory'},
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'identifier': ('django.db.models.fields.SlugField', [], {'max_length': '32', 'blank': 'True'})
+        },
+        u'review.ratingcategorytranslation': {
+            'Meta': {'unique_together': "[('language_code', 'master')]", 'object_name': 'RatingCategoryTranslation', 'db_table': "u'review_ratingcategory_translation'"},
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'language_code': ('django.db.models.fields.CharField', [], {'max_length': '15', 'db_index': 'True'}),
+            'master': ('django.db.models.fields.related.ForeignKey', [], {'related_name': "'translations'", 'null': 'True', 'to': u"orm['review.RatingCategory']"}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '256'})
+        },
+        u'review.review': {
+            'Meta': {'ordering': "['-creation_date']", 'object_name': 'Review'},
+            'average_rating': ('django.db.models.fields.FloatField', [], {'default': '0'}),
+            'content': ('django.db.models.fields.TextField', [], {'max_length': '1024', 'blank': 'True'}),
+            'content_type': ('django.db.models.fields.related.ForeignKey', [], {'to': u"orm['contenttypes.ContentType']"}),
+            'creation_date': ('django.db.models.fields.DateTimeField', [], {'auto_now_add': 'True', 'blank': 'True'}),
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'language': ('django.db.models.fields.CharField', [], {'max_length': '5', 'blank': 'True'}),
+            'object_id': ('django.db.models.fields.PositiveIntegerField', [], {}),
+            'user': ('django.db.models.fields.related.ForeignKey', [], {'to': u"orm['auth.User']", 'null': 'True', 'blank': 'True'})
+        },
+        u'review.reviewextrainfo': {
+            'Meta': {'ordering': "['type']", 'object_name': 'ReviewExtraInfo'},
+            'content_type': ('django.db.models.fields.related.ForeignKey', [], {'to': u"orm['contenttypes.ContentType']"}),
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'object_id': ('django.db.models.fields.PositiveIntegerField', [], {}),
+            'review': ('django.db.models.fields.related.ForeignKey', [], {'to': u"orm['review.Review']"}),
+            'type': ('django.db.models.fields.CharField', [], {'max_length': '256'})
+        },
+        u'user_media.usermediaimage': {
+            'Meta': {'object_name': 'UserMediaImage'},
+            'content_type': ('django.db.models.fields.related.ForeignKey', [], {'to': u"orm['contenttypes.ContentType']", 'null': 'True', 'blank': 'True'}),
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'image': ('django.db.models.fields.files.ImageField', [], {'max_length': '100', 'null': 'True', 'blank': 'True'}),
+            'object_id': ('django.db.models.fields.PositiveIntegerField', [], {'null': 'True', 'blank': 'True'}),
+            'position': ('django.db.models.fields.PositiveIntegerField', [], {'null': 'True', 'blank': 'True'}),
+            'user': ('django.db.models.fields.related.ForeignKey', [], {'to': u"orm['auth.User']"})
+        }
+    }
+
+    complete_apps = ['review']
