@@ -8,5 +8,5 @@ factory-boy==2.0.2
 mock
 django-user-media==0.9
 Pillow==2.1.0
-django-libs==1.16
+django-libs==1.30
 South
